--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
 # Core Flask dependencies
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.5
-Flask-WTF==1.1.1
+Flask-WTF==1.2.1
 Flask-RESTful==0.3.10
-Werkzeug==2.3.7
+Werkzeug==3.0.1
 
 # Database adapters
 PyMySQL==1.1.0
-psycopg2-binary==2.9.7
-jaydebeapi==1.2.3
+psycopg2-binary==2.9.9
 
 # Web forms and validation
-WTForms==3.0.1
-email-validator==2.0.0
+WTForms==3.1.1
+email-validator==2.1.0
 
 # Template and static file handling
 Jinja2==3.1.2
@@ -24,7 +23,7 @@ requests==2.31.0
 Flask-CORS==4.0.0
 
 # Basic data processing (for assessment results)
-pandas==2.0.3
+pandas==2.1.4
 
 # Caching
 Flask-Caching==2.1.0
@@ -37,17 +36,22 @@ click==8.1.7
 python-dateutil==2.8.2
 
 # JSON and data serialization
-jsonschema==4.19.0
+jsonschema==4.20.0
 
 # Logging
-structlog==23.1.0
+structlog==23.2.0
 
 # Security
-bcrypt==4.0.1
+bcrypt==4.1.2
 PyJWT==2.8.0
 
 # Production server
 gunicorn==21.2.0
 
 # Math and statistics (for scoring algorithms)
-numpy==1.24.4
+numpy==1.26.2
+
+# PDF generation
+pdfkit==1.0.0
+reportlab==4.0.7
+playwright==1.40.0
