--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ python-dateutil==2.8.2
 
 # JSON and data serialization
 jsonschema==4.20.0
+pydantic>=2.10.0,<3.0.0
 
 # Logging
 structlog==23.2.0
